--- a/anotacoes/questionario.html
+++ b/anotacoes/questionario.html
@@ -22,19 +22,71 @@
     <main>
         <article>
             <h1>Questionário</h1>
-            <h2>O que ECMAScript tem a ver com JavaScript?</h2>
+            <strong>
+                <p class="pergunta">O que ECMAScript tem a ver com JavaScript?</p>
+            </strong>
             <p class="resposta">O padrão JavaScript é ECMAScript. Desde 2012, todos os navegadores modernos possuem
                 suporte total ao ECMAScript 5.1.
                 Assim, em poucas palavras, podemos dizer que ECMAScript é uma especificação de linguagem, ou seja, ela
                 define os padrões para uma linguagem de programação, e o JavaScript é a implementação desses padrões.
             </p>
-            <h2>Java e JavaScript possuem alguma relação?</h2>
+            <strong>
+                <p class="pergunta">Java e JavaScript possuem alguma relação?</p>
+            </strong>
             <p class="resposta">
                 Não se deve confundir o JavaScript com a linguagem de programação Java. Tanto Java quanto JavaScript são
                 marcas registradas da Oracle nos Estados Unidos da América e em outros países. No entanto, as duas
                 linguagens de programação possuem sintaxe, semânticas e usos muito diferentes.
 
             </p>
+            <strong>
+                <p class="pergunta">Para que serve o Node.js ?</p>
+            </strong>
+            <p>
+                Node.js é um ambiente de tempo de execução JavaScript de plataforma cruzada que permite aos
+                desenvolvedores criar aplicativos de servidor e de rede com JavaScript.
+            </p>
+            <strong>
+                <p class="pergunta">Oque é uma variável?</p>
+            </strong>
+            <p>
+                As variáveis armazenam valores que são manipulados por nossos programas, permitindo que os algoritmos
+                sejam implementados para dar a resposta esperada para o usuário. Serve para guardar dados
+            </p>
+            <strong>
+                <p class="pergunta">Como declarar uma variável numérica inteira ou real usando JS?</p>
+            </strong>
+            <p>
+                Number é utilizado para transformar uma string em numero inteiro ou real, também é utilizado
+                o comando Number.parseInt somente para números inteiros e Number.parseFloat
+                para numero real e inteiro. <a href="../aula06/ex003.html" class="ex" target="_blank">Exemplo.</a>
+            </p>
+            <strong>
+                <p class="pergunta">Quais são os tipos primitivos do JS?</p>
+            </strong>
+            <p>
+                <div class="lista">
+                    <ul>
+                        <li class="opcoes">Number
+                            <p class="lopcoes">infinity</p>
+                            <p class="lopcoes">NaN</p>
+                        </li>
+                        <li>string</li>
+                        <li>boolean</li>
+                        <li>null</li>
+                        <li>undefined</li>
+                        <li class="opcoes">object
+                            <p class="lopcoes">Array</p>
+                        </li>
+                        <li>function</li>
+                    </ul>
+                </div>
+
+            </p>    
+            <strong>
+                <p class="pergunta">Oque significa colocar o valor null dentro de uma variável?</p>
+            </strong>
+            <p>O valor null é um literal em JavaScript que representa um valor nulo ou "vazio" (p/ex: que aponta para um objeto inexistente).</p>
         </article>
     </main>
 
