--- a/aula06/ex003.html
+++ b/aula06/ex003.html
@@ -30,10 +30,10 @@
             var n1 = Number(window.prompt("digite um número")) /* Number é utilizado 
             para transformar uma string em numero inteiro ou real, também é utilizado
             o comando Number.parseInt somente para números inteiros e Number.parseFloat
-            para numero real e inteiro*/
+            para numero real e inteiro */
             var n2 = Number(window.prompt ("digite outro número"))
             var s = n1 + n2
-            window.alert(`A soma entre numero ${n1} e ${n2} é igual a ${s}`)
+            window.alert(`A soma entre numero ${n1} e ${n2} é igual a ${s}`) /*A sigla $ é uma template string sempre usada junto com a crase*/
 
         </script>
 </body>
