--- a/anotacoes/index.html
+++ b/anotacoes/index.html
@@ -17,6 +17,7 @@
             <a href="#" class="especial">Exercício</a>
             <a href="#" class="especial">Desafios</a>
             <a href="questionario.html" class="especial">Questionário</a>
+            <a href="comandos.html" class="especial">Comandos</a>
         </nav>
     </header>
     <main>
