--- a/aula06/ex003.html
+++ b/aula06/ex003.html
@@ -7,17 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu primeiro programa...</title>
     <style>
-        body{
+        body {
             font-family: Arial, Helvetica, sans-serif;
             background-color: rgb(71, 71, 177);
         }
-        h1{
+
+        h1 {
             color: rgb(209, 89, 45);
         }
-        p{
+
+        p {
             color: white;
         }
-
     </style>
 </head>
 
@@ -26,16 +27,17 @@
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo, recusandae explicabo. Iusto dignissimos corrupti
         quod consequatur inventore, recusandae necessitatibus magni voluptatibus, eum nam quae nobis laudantium incidunt
         vero exercitationem commodi.</p>
-        <script>
-            var n1 = Number(window.prompt("digite um número")) /* Number é utilizado 
+    <script>
+        var n1 = Number(window.prompt("digite um número")) /* Number é utilizado 
             para transformar uma string em numero inteiro ou real, também é utilizado
             o comando Number.parseInt somente para números inteiros e Number.parseFloat
             para numero real e inteiro */
-            var n2 = Number(window.prompt ("digite outro número"))
-            var s = n1 + n2
-            window.alert(`A soma entre numero ${n1} e ${n2} é igual a ${s}`) /*A sigla $ é uma template string sempre usada junto com a crase*/
+        var n2 = Number(window.prompt("digite outro número"))
+        var s = n1 + n2
+        window.alert(`A soma entre numero ${n1} e ${n2} é igual a ${s}`) /*A sigla $ é uma template string sempre 
+            usada junto com a crase*/
 
-        </script>
+    </script>
 </body>
 
 </html>
