--- a/anotacoes/questionario.html
+++ b/anotacoes/questionario.html
@@ -125,21 +125,86 @@
                 ou outra moeda é so colocar a sígla da moeda desejada, USD e EUR por exemplo.
             </p>
             <strong>
-                <p class="pergunta">Para que serve o operador %em JS? seria para calcular porcentagem?</p>
+                <p class="pergunta">Para que serve o operador % em JS? seria para calcular porcentagem?</p>
             </strong>
-            <p></p>
+            <p>Não, ele é para calcular uma divisão inteira, exemplo 5 % 2 = 1, resumindo % é o resto de uma divisão</p>
             <strong>
                 <p class="pergunta">6 + 4 / 2 é igual a 5 ou 8?</p>
             </strong>
-            <p></p>
+            <p>Por ordem de precedência o programa irá exucutar primeiro a divisão e depois a soma, no caso o resultado
+                é 8,
+                para mudar a ordem de precedência, podemos fazer da seguinte maneira: (6 + 4) / 2 logo o resultado será
+                igual a 5
+                pois obrigamos o programa somar primeiro os valores dentro do parentes.
+            </p>
             <strong>
-            <p class="pergunta">Se uma variável "n" está valendo 10 e executamos um n += 5, qual será seu novo valor?</p>
+                <p class="pergunta">Qual a ordem de precedência dos operadores</p>
             </strong>
-            <p></p>
+            <p>
+            <ul class="ldois">
+                <li>()</li>
+                <li>**</li>
+                <li>* / %</li>
+                <li>+ -</li>
+            </ul>
+            </p>
+            <strong>
+                <p class="pergunta">Se uma variável "n" está valendo 10 e executamos um n += 5, qual será seu novo
+                    valor?</p>
+            </strong>
+            <p>n += 5, esta simplificando a soma do valor da variável n + 5 que é igual a 15</p>
             <strong>
                 <p class="pergunta">Para que servem os operadores ++ e --</p>
             </strong>
-            <p></p>
+            <p>É um incremento como se fosse variavel + 1 ou variavel - 1
+                exemplo: <br>
+                <span>
+                    var x = 10 <br>
+                    x++ <br>
+                    x = 11 <br>
+                    x-- <br>
+                    x = 10
+                </span>
+            </p>
+            <strong>
+                <p class="pergunta">Você já conhece os operadores relacionais e os operadores lógicos em JavaScript?</p>
+            </strong>
+            <p>Sim, operadores relacionais são: <br>
+            <ul class="ldois">
+                <li>&gt; siginifica maior que</li>
+                <li>&lt; menor que </li>
+                <li>&gt;= maior ou igual</li>
+                <li>&lt; menor ou igual </li>
+                <li> == igual</li>
+                <li> === identico</li>
+                <li> != não igual(diferente)</li>
+                <li> !== desigual restrito</li>
+            </ul>
+            Operadores lógicos: <br>
+            <ul class="ldois">
+                <li>! negação</li>
+                <li>&& conjunção</li>
+                <li>|| disconjunção</li>
+            </ul>
+            </p>
+            <strong>
+                <p class="pergunta"> Sabe a diferença entre usar = ou == ou === em JavaScript?</p>
+            </strong>
+            <p>Sim, o sinal de = significa recebe, == significa igual e === significa identico</p>
+            <strong>
+                <p class="pergunta">Conhece a ordem de precedência dos operadores do JavaScript?</p>
+            </strong>
+            <p>dentro de uma expressão iremos fazer primeiro os operadores aritimeticos, depois vem os operadores
+                relacionais, no qual não tem ordem de precedência, será feito o que vir primeiro da esquerda para a
+                direita, e por ultimo os operadores lógicos na seguinte ordem <span>!  &&  ||</span>
+            </p>
+            <strong>
+                <p>Sabe como usar o operador ternário para atribuições em JavaScript?</p>
+            </strong>
+            <p>Sim, operadores tenários são <span>? e :
+                    representandos da seguinte maneira: <br>
+                    teste ? true : false
+                </span></p>
         </article>
     </main>
 
