--- a/anotacoes/questionario.html
+++ b/anotacoes/questionario.html
@@ -180,6 +180,8 @@
                 <li> != não igual(diferente)</li>
                 <li> !== desigual restrito</li>
             </ul>
+            </p>
+            <p>
             Operadores lógicos: <br>
             <ul class="ldois">
                 <li>! negação</li>
@@ -199,7 +201,7 @@
                 direita, e por ultimo os operadores lógicos na seguinte ordem <span>!  &&  ||</span>
             </p>
             <strong>
-                <p>Sabe como usar o operador ternário para atribuições em JavaScript?</p>
+                <p class="pergunta">Sabe como usar o operador ternário para atribuições em JavaScript?</p>
             </strong>
             <p>Sim, operadores tenários são <span>? e :
                     representandos da seguinte maneira: <br>
