--- a/anotacoes/desafios.html
+++ b/anotacoes/desafios.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,7 +8,6 @@
     <link rel="stylesheet" href="estilo/style.css">
     <link rel="shortcut icon" href="imagens/fivicon.ico" type="image/x-icon">
 </head>
-
 <body>
     <header>
         <nav>
@@ -22,15 +20,8 @@
     </header>
     <main>
         <article>
-            <h1 class="ch1">Comandos</h1>
-            <h2>Todos os comandos que aprendi até o momento</h2>
-            <p>primeira aula, aprendi os comandos 
-                <span>window.alert</span> este é um comando de alerta, <!--Escreva-->
-                <span>window.confirm</span> este é um comando de confirmação
-                <span>window.prompt</span>, comando de texto <!--Tipo de escreva + leia-->
-            </p>
+            <h1></h1>
         </article>
     </main>
 </body>
-
 </html>
