--- a/anotacoes/questionario.html
+++ b/anotacoes/questionario.html
@@ -14,8 +14,8 @@
     <header>
         <nav>
             <a href="index.html"><img src="imagens/bloco-de-notas.png" alt="bloco de notas" class="bloco"></a>
-            <a href="#" class="especial">Exercício</a>
-            <a href="#" class="especial">Desafios</a>
+            <a href="exercicios.html" class="especial">Exercício</a>
+            <a href="desafios.html" class="especial">Desafios</a>
             <a href="questionario.html" class="especial">Questionário</a>
             <a href="comandos.html" class="especial">Comandos</a>
         </nav>
@@ -92,7 +92,7 @@
             <strong>
                 <p class="pergunta">Como é possivel guardar o valor digitado em um prompt() dentro de uma variável?</p>
             </strong>
-            <p>Criando uma variável e atribuindo a ela o prompt, fazendo da seguinte maneira <span>var nome =
+            <p>Criando uma variável e atribuindo a ela ao prompt, fazendo da seguinte maneira <span>var nome =
                     window.prompt("Qual o seu nome?")</span> </p>
             <strong>
                 <p class="pergunta">Como fazer com que um número digitado em um prompt() possa ser usado em cálculos?
@@ -143,7 +143,7 @@
             <p>
             <ul class="ldois">
                 <li>()</li>
-                <li>**</li>
+                <li>**</li> <!--Significa Potência-->
                 <li>* / %</li>
                 <li>+ -</li>
             </ul>
@@ -185,8 +185,8 @@
                 Operadores lógicos: <br>
             <ul class="ldois">
                 <li>! negação</li>
-                <li>&& conjunção</li>
-                <li>|| disconjunção</li>
+                <li>&& conjunção</li> <!--Significa "e"-->
+                <li>|| disconjunção</li><!--Significa "o"-->
             </ul>
             </p>
             <strong>
@@ -229,7 +229,8 @@
             <strong>
                 <p class="pergunta">Você já entendeu como funciona o DOM com JavaScript?</p>
             </strong>
-            <p>É um facilitador que existe dentro do navegador que da acesso aos elementos diretamente para o JavaScript.
+            <p>É um facilitador que existe dentro do navegador que da acesso aos elementos diretamente para o
+                JavaScript.
             </p>
             <strong>
                 <p class="pergunta">O que é uma função? Como criar funções em JS?</p>
@@ -255,8 +256,10 @@
                 <p class="pergunta">Como pegar os valores de caixas de texto e fazer cáculos com eles?</p>
             </strong>
             <p>Criando variaveis, com o exemplo acima, após criar a variavel <span>tnt1 e tnt2</span> criamos a variável
-                <span>n1 e n2</span> com o metodo Number para tranformar a string em Number, dizendo que n1 e n2 terar o valor colocado na variável tnt1 e tnt2
-                e então criamos a variável <span>s</span> onde s recebe n1 + n2.</p>
+                <span>n1 e n2</span> com o metodo Number para tranformar a string em Number, dizendo que n1 e n2 terar o
+                valor colocado na variável tnt1 e tnt2
+                e então criamos a variável <span>s</span> onde s recebe n1 + n2.
+            </p>
         </article>
     </main>
 
