--- a/aula06/ex005.html
+++ b/aula06/ex005.html
@@ -24,7 +24,7 @@
         var p1 = window.document.getElementsByTagName('p')[0]
         var corpo = window.document.body
         var d = window.document.getElementById('msg')
-        var st1 = window.document.getElementsByTagName('strong')[0]/*Quando o getElement esta no
+        var st1 = window.document.querySelectorAll('strong')[0]/*Quando o getElement esta no
         plural é necessario usar o chochetes []*/
         p1.style.color = 'red'
         corpo.style.background = 'green'
