--- a/aula06/ex007.html
+++ b/aula06/ex007.html
@@ -53,7 +53,7 @@
     <script>
         function somar() {
             var tnt1 = window.document.getElementById('txtn1')
-            var tnt2 = window.document.getElementById('txtn2')
+            var tnt2 = window.document.querySelector('input#txtn2')
             var res = window.document.getElementById('res')
             var n1 = Number(tnt1.value)
             var n2 = Number(tnt2.value)
