--- a/anotacoes/index.html
+++ b/anotacoes/index.html
@@ -14,8 +14,8 @@
     <header>
         <nav>
             <a href="index.html"><img src="imagens/bloco-de-notas.png" alt="bloco de notas" class="bloco"></a>
-            <a href="#" class="especial">Exercício</a>
-            <a href="#" class="especial">Desafios</a>
+            <a href="exercicios.html" class="especial">Exercício</a>
+            <a href="desafios.html" class="especial">Desafios</a>
             <a href="questionario.html" class="especial">Questionário</a>
             <a href="comandos.html" class="especial">Comandos</a>
         </nav>
