--- a/anotacoes/exercicios/exercicios_JS/exer01/ex015/ex015.html
+++ b/anotacoes/exercicios/exercicios_JS/exer01/ex015/ex015.html
@@ -15,7 +15,7 @@
         <div>
             
             <form action="verificador">
-                <label for="nascimento">Ano de nascimento</label>
+                <label for="nasc">Ano de nascimento</label>
                 <input type="number" name="nascimento" id="nasc">
                 <p>
                     Sexo: 
