--- a/anotacoes/exercicios/exercicios_JS/exer01/ex017/exer017.html
+++ b/anotacoes/exercicios/exercicios_JS/exer01/ex017/exer017.html
@@ -5,18 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="esctilo/style.css">
-    <title>Modelo</title>
+    <title>Tabuada</title>
 </head>
 <body>
     <header>
-        <h1>Titulo</h1>
+        <h1>Tabuada</h1>
     </header>
     <section>
         <div>
-            Olá, mundo!
+            <p>
+                <label for="num">Numero:</label>
+                <input type="number" name="numero" id="num">
+                <input type="button" value="calcular" id="calc" onclick="Calcular()">
+            </p>
         </div>
         <div>
-            
+            <select name="seltab" id="res" aria-label="Resultado" size="10"></select>
         </div>
     </section>
     <footer>
